# aisr

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  docker-compose.override.yml  docker-compose.yml  justfile
.claude/agents/: ai-agent-dev.md  backend-dev.md  code-reviewer.md  db-architect.md  docker-engineer.md  docs-generator.md  e2e-tester.md  frontend-dev.md  prd-author.md  prd-executor.md  scaffolder.md  task-orchestrator.md
.claude/commands/: docs.md  execute-prd.md  generate-cards.md  generate-flashcards.md  just.md  new-feature.md  parallel.md  prd.md  review.md  scaffold.md
backend/: Dockerfile  README.md  justfile  pyproject.toml
backend/src/aisr/: __init__.py  main.py
backend/src/aisr/core/: config.py  database.py  logging.py
backend/tests/: conftest.py
backend/tests/unit/: test_health.py
docs/prds/: 01-mvp-review-cards.md
e2e/: justfile  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: index.ts
e2e/pages/: base.page.ts  home.page.ts
e2e/tests/: home.spec.ts
frontend/: Dockerfile  index.html  justfile  package-lock.json  package.json
frontend/docker/: nginx.conf
frontend/src/: App.tsx
